{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 29,
  "lineage": "dc7326c2-a6d5-817b-85be-e1addb6bfcee",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:628350649215:loadbalancer/app/technova-prod-alb/a86afc36ebe87748",
            "arn_suffix": "app/technova-prod-alb/a86afc36ebe87748",
            "desync_mitigation_mode": "defensive",
            "dns_name": "technova-prod-alb-965782546.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:628350649215:loadbalancer/app/technova-prod-alb/a86afc36ebe87748",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "technova-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e0145e2e8035523"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-089d50906709c3697"
              },
              {
                "subnet_id": "subnet-0c16c71f5f51a8500"
              }
            ],
            "subnets": [
              "subnet-089d50906709c3697",
              "subnet-0c16c71f5f51a8500"
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb",
              "Project": "technova"
            },
            "vpc_id": "vpc-09a2605b44ad2c3f0",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:628350649215:listener/app/technova-prod-alb/a86afc36ebe87748/2e4412628dfa1b1b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:628350649215:targetgroup/technova-prod-tg/06f3e7de5bde81eb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:628350649215:listener/app/technova-prod-alb/a86afc36ebe87748/2e4412628dfa1b1b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:628350649215:loadbalancer/app/technova-prod-alb/a86afc36ebe87748",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-http-listener",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-http-listener",
              "Project": "technova"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:628350649215:targetgroup/technova-prod-tg/06f3e7de5bde81eb",
            "arn_suffix": "targetgroup/technova-prod-tg/06f3e7de5bde81eb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:628350649215:targetgroup/technova-prod-tg/06f3e7de5bde81eb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "technova-prod-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-tg",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-tg",
              "Project": "technova"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:security-group/sg-05e0145e2e8035523",
            "description": "Security group for the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e0145e2e8035523",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "technova-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "628350649215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb-sg",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb-sg",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:security-group/sg-06d15c3bd979b39fd",
            "description": "Security group for the web application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d15c3bd979b39fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e0145e2e8035523"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e0145e2e8035523"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "technova-prod-instance-sg",
            "name_prefix": "",
            "owner_id": "628350649215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-instance-sg",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-instance-sg",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009f9a20d47876b95",
            "domain": "vpc",
            "id": "eipalloc-009f9a20d47876b95",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-246-176-201.us-west-2.compute.amazonaws.com",
            "public_ip": "44.246.176.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-1",
              "Project": "technova"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06658be6da9123871",
            "domain": "vpc",
            "id": "eipalloc-06658be6da9123871",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-240-86-72.us-west-2.compute.amazonaws.com",
            "public_ip": "44.240.86.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-2",
              "Project": "technova"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:internet-gateway/igw-0927a885ac362c288",
            "id": "igw-0927a885ac362c288",
            "owner_id": "628350649215",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-igw",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-igw",
              "Project": "technova"
            },
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009f9a20d47876b95",
            "connectivity_type": "public",
            "id": "nat-0a33a3e9c21ead97e",
            "network_interface_id": "eni-0f031d4d5fa406b1a",
            "private_ip": "10.0.1.20",
            "public_ip": "44.246.176.201",
            "subnet_id": "subnet-089d50906709c3697",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-1",
              "Project": "technova"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06658be6da9123871",
            "connectivity_type": "public",
            "id": "nat-037d8b49e3cf4b774",
            "network_interface_id": "eni-076f3fa42e9493149",
            "private_ip": "10.0.2.113",
            "public_ip": "44.240.86.72",
            "subnet_id": "subnet-0c16c71f5f51a8500",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-2",
              "Project": "technova"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:route-table/rtb-06e85c8e3eb05c7ff",
            "id": "rtb-06e85c8e3eb05c7ff",
            "owner_id": "628350649215",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a33a3e9c21ead97e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-1",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:route-table/rtb-06d19d4ec956bd2d8",
            "id": "rtb-06d19d4ec956bd2d8",
            "owner_id": "628350649215",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037d8b49e3cf4b774",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-2",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:route-table/rtb-0254353d92fb9473d",
            "id": "rtb-0254353d92fb9473d",
            "owner_id": "628350649215",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0927a885ac362c288",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-rt",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-rt",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c96f3553c5d7219b",
            "route_table_id": "rtb-06e85c8e3eb05c7ff",
            "subnet_id": "subnet-0f8cbd85ec916c448"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f36f9d5d6b346c23",
            "route_table_id": "rtb-06d19d4ec956bd2d8",
            "subnet_id": "subnet-005c473ab7cbfb51d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0170c716c66d36226",
            "route_table_id": "rtb-0254353d92fb9473d",
            "subnet_id": "subnet-089d50906709c3697"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082b0f3bc3330d06c",
            "route_table_id": "rtb-0254353d92fb9473d",
            "subnet_id": "subnet-0c16c71f5f51a8500"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:subnet/subnet-0f8cbd85ec916c448",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8cbd85ec916c448",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628350649215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-1",
              "Project": "technova"
            },
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:subnet/subnet-005c473ab7cbfb51d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005c473ab7cbfb51d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628350649215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-2",
              "Project": "technova"
            },
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:subnet/subnet-089d50906709c3697",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089d50906709c3697",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628350649215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-1",
              "Project": "technova"
            },
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:subnet/subnet-0c16c71f5f51a8500",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c16c71f5f51a8500",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628350649215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-2",
              "Project": "technova"
            },
            "vpc_id": "vpc-09a2605b44ad2c3f0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:628350649215:vpc/vpc-09a2605b44ad2c3f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b45d983adf0a543",
            "default_route_table_id": "rtb-0549ac0d0fcf05377",
            "default_security_group_id": "sg-0c2209a45f897f79c",
            "dhcp_options_id": "dopt-045228b22aeeb3194",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a2605b44ad2c3f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0549ac0d0fcf05377",
            "owner_id": "628350649215",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-vpc",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-vpc",
              "Project": "technova"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}